Updated OAS docs to match "MVP" changes, other cleanup.
