# metapyquod-server/metapyquod/swagger_server/controllers/telemetry_controller.py
@@ -8,22 +8,8 @@ from swagger_server.models.stats_result import StatsResult  # noqa: E501
 from swagger_server import util
 from swagger_server import mainEngine
 
-def telemetry_recent_get():  # noqa: E501
-    """Get the most recently indexed documents.
-
-     # noqa: E501
-
-
-    :rtype: List[QueryResult]
-    """
-    return 'do some magic!'
-
-
 def telemetry_stats_get():  # noqa: E501
     """Get statistics about the search index.
-
-     # noqa: E501
-
 
     :rtype: StatsResult
     """
